YETUS-823. releasedocmaker-jar-with-dependencies is missing dependencies (addendum)
Signed-off-by: Allen Wittenauer <aw@apache.org>

--- a/releasedocmaker/pom.xml
+++ b/releasedocmaker/pom.xml
@@ -132,6 +132,7 @@
               <goal>jython</goal>
             </goals>
             <configuration>
+              <temporaryBuildDirectory>${project.build.directory}/jython-plugins-tmp/</temporaryBuildDirectory>
               <libraries>
                 <param>--index-url=https://pypi.python.org/simple/</param>
                 <param>python-dateutil</param>
