YETUS-1047. Replace yetus-minimaven-plugin with yetus-maven-plugin (#175)

--- a/shelldocs/pom.xml
+++ b/shelldocs/pom.xml
@@ -91,7 +91,7 @@
 
       <plugin>
         <groupId>org.apache.yetus</groupId>
-        <artifactId>yetus-minimaven-plugin</artifactId>
+        <artifactId>yetus-maven-plugin</artifactId>
         <version>${project.version}</version>
         <executions>
           <execution>
